Fix Docker config
Fix typo in specs

--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 local_default: &local_default
   username: postgres
-  #host: db
-  url: 'postgres://postgres:postgres@localhost'
+  host: db
   password:
 development:
   <<: *default
