--- a/ui/package.json
+++ b/ui/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@types/yup": "^0.29.3",
     "formik": "^2.1.5",
     "isomorphic-fetch": "^2.2.1",
     "next": "9.5.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "yup": "^0.29.2"
   },
   "devDependencies": {
     "@types/react": "^16.9.43",
