--- a/ui/package.json
+++ b/ui/package.json
@@ -12,7 +12,7 @@
     "@material-ui/icons": "^4.9.1",
     "@types/yup": "^0.29.3",
     "formik": "^2.1.5",
-    "isomorphic-fetch": "^2.2.1",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
